--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "snapit",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
+    "lint": "eslint .",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -10,13 +11,28 @@
   },
   "dependencies": {
     "expo": "~49.0.8",
+    "expo-constants": "~14.4.2",
+    "expo-linear-gradient": "^12.3.0",
+    "expo-linking": "~5.0.2",
+    "expo-router": "2.0.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-dom": "18.2.0",
+    "react-native": "0.72.4",
+    "react-native-animatable": "^1.3.3",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-paper": "^5.10.3",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-web": "~0.19.6",
+    "expo-camera": "~13.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "eslint": "^8.47.0",
+    "eslint-config-universe": "^12.0.0",
+    "prettier": "3.0.2",
     "typescript": "^5.1.3"
   },
   "private": true
