--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "expo": "~49.0.8",
+    "expo-camera": "~13.4.2",
     "expo-constants": "~14.4.2",
     "expo-linear-gradient": "^12.3.0",
     "expo-linking": "~5.0.2",
@@ -24,8 +26,7 @@
     "react-native-paper": "^5.10.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6",
-    "expo-camera": "~13.4.2"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
