--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@supabase/supabase-js": "^2.33.1",
     "expo": "~49.0.8",
     "expo-camera": "~13.4.2",
     "expo-constants": "~14.4.2",
