--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.4",
     "@expo/vector-icons": "^13.0.0",
     "@supabase/supabase-js": "^2.33.1",
     "expo": "~49.0.8",
@@ -19,6 +20,7 @@
     "expo-linking": "~5.0.2",
     "expo-router": "2.0.0",
     "expo-status-bar": "~1.6.0",
+    "graphql": "^15.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
