--- a/client/package.json
+++ b/client/package.json
@@ -12,24 +12,30 @@
   "dependencies": {
     "@apollo/client": "^3.8.4",
     "@expo/vector-icons": "^13.0.0",
+    "@hookform/resolvers": "^3.3.1",
     "@supabase/supabase-js": "^2.33.1",
     "expo": "~49.0.8",
     "expo-camera": "~13.4.2",
     "expo-constants": "~14.4.2",
+    "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "^12.3.0",
     "expo-linking": "~5.0.2",
     "expo-router": "2.0.0",
     "expo-status-bar": "~1.6.0",
     "graphql": "^15.8.0",
+    "joi": "^17.10.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.2",
     "react-native": "0.72.4",
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^5.10.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6"
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-web": "~0.19.6",
+    "text-encoding": "^0.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
