working on sign up

--- a/client/package.json
+++ b/client/package.json
@@ -36,7 +36,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.6",
-    "text-encoding": "^0.7.0"
+    "text-encoding": "^0.7.0",
+    "@react-native-async-storage/async-storage": "1.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
