--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.8.4",
     "@expo/vector-icons": "^13.0.0",
     "@hookform/resolvers": "^3.3.1",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@supabase/supabase-js": "^2.33.1",
     "expo": "~49.0.8",
     "expo-camera": "~13.4.2",
@@ -30,6 +31,7 @@
     "react-native": "0.72.4",
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^5.10.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
